--- a/mynotes/requirements.txt
+++ b/mynotes/requirements.txt
@@ -7,6 +7,7 @@ Django==5.0.4
 django-anymail==11.0.1
 django-ckeditor==6.7.1
 django-ckeditor-5==0.2.13
+django-cors-headers==4.4.0
 django-crispy-forms==2.2
 django-import-export==4.1.1
 django-jazzmin==3.0.0
@@ -19,6 +20,7 @@ idna==3.7
 import-export==0.3.1
 pillow==10.4.0
 platformdirs==4.2.2
+pygame==2.6.0
 requests==2.32.3
 setuptools==70.0.0
 sqlparse==0.5.0
